fix slider jumpto 0 bug. class to show audio controls

--- a/css/ttww.css
+++ b/css/ttww.css
@@ -688,7 +688,7 @@ body {
   cursor: pointer;
   position: absolute;
   opacity: 0;
-  width: 20%;
+  width: 90%;
   /* width: 170%; */
   display: flex;
   align-items: center;
@@ -696,6 +696,12 @@ body {
   color: #999;
   font-size: 200%;
   transition: opacity 0.5s, width 0.8s;
+}
+
+.showSkip {
+  opacity: 1;
+  width: 170%;
+  /* transition: opacity 0.5s, width 0.8s; */
 }
 
 /***************** DOWNLOAD MENU ****************/
